// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> it renders a Button danger 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #f6bcc2;
  border-color: #f6bcc2;
  border-bottom-color: #f08f99;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #f9d2d6;
  color: #18181c;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  color: #242429;
  background: #fce9eb;
  border-style: solid;
  border-width: 1px;
  border-color: #f6bcc2;
}

.c0[aria-pressed="true"] {
  position: relative;
  top: 1px;
  color: #18181c;
  background: #f9d2d6;
  border-width: 1px;
  border-color: #f6bcc2;
  border-top-color: #f08f99;
  box-shadow: inset 0 1px 2px 0 #f08f99;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #f6bcc2;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    danger
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button info 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #d7e8f9;
  border-color: #d7e8f9;
  border-bottom-color: #abcff2;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #edf5fc;
  color: #18181c;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  color: #242429;
  background: #fff;
  border-style: solid;
  border-width: 1px;
  border-color: #d7e8f9;
}

.c0[aria-pressed="true"] {
  position: relative;
  top: 1px;
  color: #18181c;
  background: #edf5fc;
  border-width: 1px;
  border-color: #d7e8f9;
  border-top-color: #abcff2;
  box-shadow: inset 0 1px 2px 0 #abcff2;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #d7e8f9;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    info
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button link 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  color: #fff;
  background: #1a85ff;
  border-style: solid;
  border-width: 1px;
  border-color: #006be6;
}

.c0[aria-pressed="true"] {
  position: relative;
  top: 1px;
  color: #fff;
  background: #07f;
  border-width: 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    link
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button primary 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
  border-bottom-color: #003a61;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  color: #fff;
  background: #0078c7;
  border-style: solid;
  border-width: 1px;
  border-color: #005994;
}

.c0[aria-pressed="true"] {
  position: relative;
  top: 1px;
  color: #fff;
  background: #0068ae;
  border-width: 1px;
  border-color: #005994;
  border-top-color: #003a61;
  box-shadow: inset 0 1px 2px 0 #003a61;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #005994;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    primary
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button secondary 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  color: #242429;
  background: #fff;
  border-style: solid;
  border-width: 1px;
  border-color: #eaeaea;
}

.c0[aria-pressed="true"] {
  position: relative;
  top: 1px;
  color: #18181c;
  background: #f7f7f7;
  border-width: 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    secondary
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button success 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #e0f2bd;
  border-color: #e0f2bd;
  border-bottom-color: #ccea92;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #eaf6d2;
  color: #18181c;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  color: #242429;
  background: #f4fae8;
  border-style: solid;
  border-width: 1px;
  border-color: #e0f2bd;
}

.c0[aria-pressed="true"] {
  position: relative;
  top: 1px;
  color: #18181c;
  background: #eaf6d2;
  border-width: 1px;
  border-color: #e0f2bd;
  border-top-color: #ccea92;
  box-shadow: inset 0 1px 2px 0 #ccea92;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #e0f2bd;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    success
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button warning 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #fee5ad;
  border-color: #fee5ad;
  border-bottom-color: #fdd57b;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #feedc6;
  color: #18181c;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  color: #242429;
  background: #fff5df;
  border-style: solid;
  border-width: 1px;
  border-color: #fee5ad;
}

.c0[aria-pressed="true"] {
  position: relative;
  top: 1px;
  color: #18181c;
  background: #feedc6;
  border-width: 1px;
  border-color: #fee5ad;
  border-top-color: #fdd57b;
  box-shadow: inset 0 1px 2px 0 #fdd57b;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #fee5ad;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    warning
     
  </button>
</div>
`;

exports[`<Button /> renders 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  color: #fff;
  background: #1a85ff;
  border-style: solid;
  border-width: 1px;
  border-color: #006be6;
}

.c0[aria-pressed="true"] {
  position: relative;
  top: 1px;
  color: #fff;
  background: #07f;
  border-width: 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    Toggle button
  </button>
</div>
`;
